--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <aside class="container-fluid">
             <div class="row pt-4 pb-5 mx-5">
                 <div class="col-sm-6 col-lg-3 p-4">
-                    <a target="_blank" href="https://cannesprlions.com/en/lionsnews/new-uses/" rel="noopener noreferrer">
+                    <a target="_blank" href="https://franibanezm.github.io/clase_10/remake/index.htmal" rel="noopener noreferrer">
                         <img src="images/harrypotter.jpg" class="shadow img-fluid" onmousemove="primeraRevista()" onmouseleave="nada()" />
                     </a>
                 </div>
