--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                     </a>
                 </div>
                 <div class="col-sm-6 col-lg-3 p-4">
-                    <a target="_blank" href="https://cannesprlions.com/en/lionsnews/mismatches/" rel="noopener noreferrer">
-                        <img src="images/terminator.jpg" class="shadow img-fluid" onmousemove="cuartaRevista()" onmouseleave="nada()" />
+                    <a target="_blank" href="https://mirkogonzalez.github.io/clase-10/remake/index.html" rel="noopener noreferrer">
+                        <img src="images/oscar.jpg" class="shadow img-fluid" onmousemove="cuartaRevista()" onmouseleave="nada()" />
                     </a>
                 </div>
             </div>
