--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </a>
                 </div>
                 <div class="col-sm-6 col-lg-3 p-4">
-                    <a target="_blank" href="https://franibanezm.github.io/clase_10/remake/index.html" rel="noopener noreferrer">
+                    <a target="_blank" href="https://valentinarey.github.io/clase_10/remake/index.html" rel="noopener noreferrer">
                         <img src="images/rapidoyfurioso.jpg" class="shadow img-fluid" onmousemove="segundaRevista()" onmouseleave="nada()" />
                     </a>
                 </div>
